--- a/qalinks/src/app/header/header.component.html
+++ b/qalinks/src/app/header/header.component.html
@@ -1,3 +1,8 @@
-<p>
-  header works!
-</p>
+<div class="header">
+  <a href="#default" class="logo">CompanyLogo</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+</div>
