--- a/qalinks/src/app/header/header.component.html
+++ b/qalinks/src/app/header/header.component.html
@@ -1,8 +1,7 @@
 <div class="header">
   <a href="#default" class="logo">CompanyLogo</a>
   <div class="header-right">
-    <a class="active" href="#home">Home</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a routerLink="">Home</a>
+    <a routerLink="about">About</a>
   </div>
 </div>
